--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-leaving my footprints
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Just Plain Text</title>
+</head>
+<body>
+	<section>
+		<p>leaving my footprints</p>
+	</section>
+</body>
+</html>
